--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.8.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-radio-group": "^3.0.3",
     "react-scripts": "2.1.3"
   },
   "scripts": {
